--- a/source/themes/simple/SimpleSelect.scss
+++ b/source/themes/simple/SimpleSelect.scss
@@ -63,7 +63,6 @@ $select-arrow-url-open: var(--rp-select-arrow-url-open, url("#{$theme-assets-pat
     left: $select-arrow-left;
     height: $select-arrow-height;
     width: $select-arrow-width;
-    z-index: 2;
   }
 }
 
